# mc_bedrock_passive_mob

./: LICENSE  README.md  pyproject.toml  requirements.txt
addon/: manifest.json
src/mc_bedrock_passive_mob/: populate_entities.py
