[project]
name = "mc-bedrock-passive-mob"
version = "0.1.0"
description = "Minecraft Bedrock Passive Mob Addon by BouncyRiceball"
authors = [
    {name = "Calvin Kong",email = "hungwunfai@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "commentjson (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
